--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,7 @@
 body {
     background-color: darkgrey;
     position: relative;
-    font-family: Ubuntu;
+    font-family: Ubuntu !important;
 }
 
 .buffer{
